final editing css

--- a/src/18. Legong Mahabharata.jade
+++ b/src/18. Legong Mahabharata.jade
@@ -49,7 +49,7 @@ html
 
       section  
         h3 Jadwal Tari Di Puri Saren Ubud
-        table(border=5 cellpadding=10 cellspacing=20)
+        table.zebra-table
            tr(align='left')
              td Hari
              td Jenis Tari
@@ -86,7 +86,7 @@ html
 
 
       section  
-        h3 Tips Menonton Tari Bali Di Puri Saren Ubud
+        h3.bullet Tips Menonton Tari Bali Di Puri Saren Ubud
         ol 
           li Ingin mendapatkan tempat duduk di bagian depan, anda harus datang lebih awal, setidaknya 30 menit lebih awal.
           li Belilah tiket dari anak-anak yang banyak menjual tiket di depan puri Saren, karena anda dapat menawar harga tiket.
