--- a/src/19. Yeh Pulu Relief.jade
+++ b/src/19. Yeh Pulu Relief.jade
@@ -21,32 +21,32 @@ html
         p Lokasi dari objek wisata Yeh Pulu Bali, berada di desa Bedulu, Kecamatan Blahbatuh, Kabupaten Gianyar. Karena terletak di desa Bedahulu, pura Yeh Pulu juga sering disebut dengan nama Yeh Pulu Bedulu. Untuk berwisata ke objek wisata Yeh Pulu, anda tidak harus secara khusus meluangkan waktu untuk ke objek wisata di Ubud ini. Karena tempat wisata Yeh Pulu, searah dengan rute Kuta - Denpasar - Ubud - Kintamani.
 
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Rute wisata Kuta - Denpasar - Ubud - Kintamani, salah satu rute favorit wisatawan dalam memilih paket tour Bali. Salah satu yang paling favorit adalah paket tour Ubud Kintamani. Jika anda memang menyukai wisata ke tempat bersejarah, maka pura Goa Gajah jangan anda lewatkan, karena lokasinya berdekatan dengan Yeh Pulu Relief. 
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         img(src="images/yeh-pulu-relief.jpg" height = 300 width 600)
         p Yang unik dari lokasi Pura ini, karena terletak di lokasi persawahan. Lokasi persawahaan sangat luas dan tersebar di segala penjuru desa Bedulu. Jadi saat wisata, anda tidak hanya melihat relief sejarah pura, selain itu anda juga akan melihat pemandangan persawahaan yang  tertata rapi.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Untuk mencapai lokasi dari pura ini, anda harus melewati jalanan setapak lumayan kecil. Jalan setapak ini sangat terawat, baik dari sisi kebersihan dan keindahan. Perawatan akan jalan setapak ini, dilakukan oleh masyarakat sekitar yang memiliki organisasi pertanian, dengan nama Subak. Di lokasi objek wisata ini, tersedia sarana tempat parkir, toilet, toko penjual oleh-oleh khas Bali dan jasa pemandu wisata, jika anda ingin tahu lebih tentang sejarah Pura Yeh Pulu Bedulu.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Tempat Wisata Pura Dengan Relief Kuno
         img.big(src="images/yeh-pulu-bedulu.jpg" height = 300 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
+      section       
         p Di objek wisata ini, anda akan dapat melihat banyak relief kuno yang sangat unik. Karena terdapat banyak relief di tempat wisata pura ini, maka tempat wisata ini sering disebut dengan nama relief Yeh Pulu. Relief bersejarah yang terdapat di sini, di pahat pada batu cadas, dan panjang relief sekitar 25 meter dengan lebar relief 2 meter.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Sejarah Pura & Arti Nama Yeh Pulu Bedulu
 
         p Sejarah relief yang terdapat di lokasi wisata ini, menceritakan tentang sejarah kehidupan masyarakat Bali kuno, pada masa kerajaan Bedahulu. Tidak hanya relief didinding, lubang menjorok kedalam untuk tempat bertapa, juga ada di objek wisata ini. Konon tempat ini digunakan untuk bertapa raja Bedahulu, sebelum beliau kalah berperang melawan kerajaan Majapahit pada tahun 1343.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p  Yeh artinya air dan Pulu artinya gentong yang dulunya digunakan sebagai tempat beras. Gentong ini ditempatkan di bagian barat dari Yeh Pulu relief dan berada tengah tempat air suci. Jika anda menyukai wisata pura di Bali, untuk informasi, salah satu pura di Bali yang paling disukai wisatawan untuk di kunjungi adalah pura Ulun Danu Beratan. Jika anda sempat melihat di brosur atau majalah wisata yang memperlihatkan pura berada di tengah danau, inilah pura Ulun Danu Beratan.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Aktivitas Wisata Alam Ubud
 
         p Selain wisata ke pura ini, tempat wisata di Ubud Bali, juga menyediakan aktivitas wisata alam yang bersifat petualangan. Wisata petualangan alam di Ubud yang paling disukai wisatawan domestik adalah Bali rafting. Salah satu tempat rafting di Bali yang bersifat rekreasi adalah sungai Ayung Ubud.
