--- a/src/index.jade
+++ b/src/index.jade
@@ -5,54 +5,110 @@ html
   body.classic
     include menu
     article
-      Section
-        h1 Pura Taman Saraswati
-        img(src="images/Pura-Taman-Saraswati-Ubud.jpg" height = 300 width = 600)
-
-      section
-        h2 Penjelasan Pura Taman Saraswati
-        p Pura Taman Saraswati Ubud - Wisata ke Ubud Bali, apa ada yang tidak suka? Jika ada, sebagian besar penyebabnya karena harga-harga di kawasan objek wisata Ubud, lebih mahal dibandingkan dengan objek wisata terkenal di Bali yang lain.Hampir sebagian besar wisatawan mancanegara dan domestik, selalu merencanakan untuk mengunjungi tempat wisata di Ubud. Disini tersedia banyak hotel dari kelas bintang lima sampai dengan hotel melati.
-
-      section
-        p Selain itu, Ubud juga sangat terkenal akan wisata arung jeram yang lebih dikenal dengan nama Ayung rafting Ubud.Desa Ubud, sangat terkenal akan wisata seni dan budaya dan setiap hari di tempat wisata Ubud, diselenggarakan pentas kesenian Bali. Salah satunya adalah pementasan tari kecak Bali.Ubud merupakan salah satu tempat terbaik untuk menonton tari kecak di Bali, selain menonton tari kecak di Uluwatu. Salah satu tempat pementasan tarian kecak di Ubud adalah di Pura Taman Saraswati Ubud.
-
-      section
-        h2 Menonton Tari Kecak Di Pura Taman Saraswati Ubud
-        p Sebelum kami menuliskan tentang tari kecak di Pura Taman Saraswati Ubud. Ada baiknya kami menuliskan sedikit tentang pura Pura Taman Saraswati Ubud. Seperti yang anda tahu, pura adalah tempat suci agama hindu di Bali dan pura Taman Saraswati Ubud adalah salah satunya. Pura ini, sesuai dengan namanya adalah tempat pemujaan Dewi Saraswati (Dewi Pengetahuan). Lokasi dari pura ini, terdapat di jalan raya Ubud.
-
-      section
-        p Pura Taman Saraswati Ubud, sedikit berbeda dari pura-pura lain yang ada di Bali. Pura ini memiliki kolam yang banyak terdapat bunga teratai dan kolam teratai inilah, daya tarik utama dari pura Saraswati. Jika anda menyukai melihat seni ukir khas Ubud Bali, disinilah tempatnya untuk melihat. Hampir setiap bangunan pura, terdapat seni ukir dari para seniman Ubud.
-
-
-      section
-        h2 Pura Kolam Bunga Teratai
-        p Pura ini memiliki panggung pemantasan tari kecak dan panggung di kelilingi oleh kolam teratai. Saat anda liburan di Bali dan berencana untuk menonton tarian kecak Ubud di Pura Taman Saraswati, sebaiknya anda memperhatikan terlebih dahulu, jadwal pementasan tarian kecak di Pura Taman Saraswat Ubud. Tidak setiap hari, diadakan pementasan tarian kecak di pura ini.
 
       Section
-        h2 Jadwal Pementasan Tari Kecak Di Pura Taman Saraswati Ubud
-        p Hari selasa dan hari kamis, mulai pertunjukan jam 19:30, dengan harga tiket Rp 75.000 per orang. Pertunjukan tarian kecak di bawakan oleh group tari Sandhi Suara.
-
-      section
-         p Bagi anda yang ingin menonton tarian kecak di Ubud tidak akan susah, walupun anda tidak datang pada hari selasa atau kamis. Setiap hari diadakan pementasan tarian kecak di Ubud, hanya tempat pementasannya yang berbeda-beda.
-         <p style="color:red"> Lihat di sini <a href="4. Tari Kecak Ubud.html#4"> Jadwal Tari Kecak Ubud.</a></p>
-         p Ada beberapa cara yang dapat anda lakukan untuk dapat berwisata ke objek wisata Ubud :
+        h1 Wisata Ubud Bali
 
       Section
-        h3 1. Mencari Jasa Sewa Mobil Dengan Supir Di Bali
-        p Dengan cara menyewa mobil + driver di Bali, akan sangat memudahkan anda untuk berpergian dari satu tempat wisata di Bali ke tempat wisata yang lain, tanpa memikirkan mencari tempat parkir, mencari jalan pintas, serta memikirakan tetang kemacetan jalanan.
-        p Objek wisata di Ubud, sangat jarang tersedia tempat parkir mobil, hampir sebagian besar, orang parkir di penggir jalan dan sangat sering penuh. Karena hal ini, kami sangat menyarankan anda untuk mencari penyedia jasa rent car di Bali dengan supir.
+        P Wisata Ubud Bali, tempat wisata di Bali yang banyak wisatawan mancanegara dan wisatawan domestik yang tertarik untuk kunjungi. Tempat wisata di Ubud Bali, adalah sebuah kecamatan yang sangat terkenal semejak tahun 1930-an.
+        p Tempat wisata di Ubud Bali, terletak di Kabupaten Gianyar, Kabupaten yang banyak memiliki seniman dan dapat dikatakan merupakan pusat budaya seni di Bali, khusus seni lukis, seni ukir, seni patung, seni tari dan musik traditional Bali.
+        p Desa Ubud dari airport <A href = "http://www.rentalmobilbali.net/tag/denpasar/"> Denpasar </a>, berjarak kurang lebih 40 kilometer, dan dengan mobil anda akan menempuh waktu selama satu setengah jam.
 
       Section
-        h3 2. Membeli Paket Wisata Murah Di Bali
-        p Karena Ubud sangat terkenal dan mendapat permintaan yang sangat tinggi dari wisatawan, maka sangat banyak penyedia usaha perjalanan wisata yang menyediakan Ubud tour.
-        p Kelebihan dari membeli paket tour murah di Bali, selain anda mendapat kelebihan layanan jasa sewa mobil dengan supir, jadwal tour anda akan terencana dan terarah. Selain itu, budget liburan anda akan terencana. 
+        h1 Wisata Ubud Bali Indonesia
+        img.big(src="images/wisata-ubud-bali.png" height = 300 width = 600)
+
+      Section
+        p Desa Ubud, daerah seni yang sangat sering disebut sebagai desa bertaraf internasional. Semua orang yang telah mengenal tempat wisata Ubud Bali pasti mengatakan, Ubud memang pantas untuk menyandang predikat desa internasional. Sebagian besar dipinggir jalan di kawasan ubud terdapat restaurant, hotel, galeri dan toko-toko yang menjual kerajinan lokal.
+        p Tempat wisata di Ubud Bali sangat terkenal terkenal, baik di Indonesia maupun ke mancanegara, kecamatan yang memiliki lokasi yang terletak di antara persawahan dan kawasan hutan diapit oleh jurang-jurang dengan sungai, yang membuat lokasi ini, menggambarkan alam yang sangat indah.
+
+      Section
+        p Selain karena kondisi alam, Ubud juga terkenal karena seni dan budaya Bali dan sangat berkembang dari tahun ketahun. Sebagian masyarakat Ubud, kehidupan sehari-hari mereka tidak lepas dari unsur seni dan budaya. Juga sebagian masyarakatnya bermata pencaharian sebagai seniman.
+
+      Section
+        h2 Daftar Aktifitas & Tempat Menarik Di Ubud
+
+      Section
+        <a href="1. Tampak Siring.html"> <h2> Tampak Siring </h2> </a>
+        img.big(src="images/Tampak Siring - 1.jpg" height = 300 width = 600)
+
+      Section
+        <a href="2. Puri Ubud.html"> <h2> Puri Ubud </h2> </a>
+        img.big(src="images/istana-puri-saren-ubud-bali.jpg" height = 300 width = 600)
+
+      Section
+        <a href="3. Pura Taman Saraswati.html"> <h2> Pura Taman Saraswati </h2> </a>
+        img.big(src="images/Pura-Taman-Saraswati-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="4. Tari Kecak Ubud.html"> <h2> Tari Kecak Ubud </h2> </a>
+        img.big(src="images/Tari-Kecak-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="5. Lempad House.html"> <h2> Lempad House </h2> </a>
+        img.big(src="images/lempad-house.jpg" height = 300 width = 600)
+
+      Section
+        <a href="6. Ayung Rafting.html"> <h2> Ayung Rafting </h2> </a>
+        img.big(src="images/ayung-rafting-ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="7. Sawah Terasering Ubud.html"> <h2> Sawah Terasering Ubud </h2> </a>
+        img.big(src="images/Sawah-Terasering-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="8. Ubud Monkey Forest.html"> <h2> Ubud Monkey Forest </h2> </a>
+        img.big(src="images/ubudMKF.jpg" height = 300 width = 600)
+
+      Section
+        <a href="9. Arma Museum Ubud.html"> <h2> Arma Museum Ubud </h2> </a>
+        img.big(src="images/amu1.jpg" height = 300 width = 600)
+
+      Section
+        <a href="10. Goa Gajah Ubud.html"> <h2> Goa Gajah Ubud </h2> </a>
+        img.big(src="images/Goa Gajah - 1.jpg" height = 300 width = 600)
+
+      Section
+        <a href="11. Gunung Kawi Bali.html"> <h2> Gunung Kawi Bali </h2> </a>
+        img.big(src="images/Gunung-Kawi-Bali.jpg" height = 300 width = 600)
+
+      Section
+        <a href="12. Air Terjun Tegenungan.html"> <h2> Air Terjun Tegenungan </h2> </a>
+        img.big(src="images/air-terjun-tegenungan.jpg" height = 300 width = 600)
+
+      Section
+        <a href="13. Tirta Sari Legong.html"> <h2> Tirta Sari Legong </h2> </a>
+        img.big(src="images/tsl.jpg" height = 300 width = 600)
+
+      Section
+        <a href="14. Museum Puri Lukisan Ubud.html"> <h2> Museum Puri Lukisan Ubud </h2> </a>
+        img.big(src="images/Museum-Puri-Lukisan-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="15. Pura Gunung Lebah.html"> <h2> Pura Gunung Lebah </h2> </a>
+        img.big(src="images/PGL.jpg" height = 300 width = 600)
+
+      Section
+        <a href="16. Museum Neka Ubud Bali.html"> <h2> Museum Neka Ubud Bali </h2> </a>
+        img.big(src="images/museum-neka-ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="17. Museum Blanco Ubud.html"> <h2> Museum Blanco Ubud </h2> </a>
+        img.big(src="images/don-antonio-blanco-museum-ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="18. Legong Mahabharata.html"> <h2> Legong Mahabharata </h2> </a>
+        img.big(src="images/Legong-Mahabharata-Di-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="19. Yeh Pulu Relief.html"> <h2> Yeh Pulu Relief </h2> </a>
+        img.big(src="images/yeh-pulu-relief.jpg" height = 300 width = 600)
+
+      Section
+        <a href="20. Tari Barong Ubud.html"> <h2> Tari Barong Ubud </h2> </a>
+        img.big(src="images/TariBarongUbud.jpg" height = 300 width = 600)
 
    include footer
-
-
-
-
-
 
 
 
