--- a/src/menu.jade
+++ b/src/menu.jade
@@ -6,12 +6,12 @@ nav(class="navbar navbar-default", role="navigation")
       span(class="icon-bar")
       span(class="icon-bar")
       span(class="icon-bar")
-     a(class="navbar-brand", href="index.html") Wisata Ubud Bali
+     a(class="navbar-brand", href="introduction.html") Wisata Ubud Bali
 
     div(class="collapse navbar-collapse", id="presentation-chooser")
      ul(class="nav navbar-nav")
       li(class="dropdown")
-       a(class="dropdown-toggle", data-toggle="dropdown", href="#") Daftar Wisata <b class="caret"></b>
+       a(class="dropdown-toggle", data-toggle="dropdown", href="#") Daftar Wisata 1<b class="caret"></b>
        ul(class="dropdown-menu")
         li <a href="1. Tampak Siring.html">Tampak Siring</a>
         li <a href="2. Puri Ubud.html">Puri Ubud</a>
@@ -23,6 +23,19 @@ nav(class="navbar navbar-default", role="navigation")
         li <a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a>
         li <a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a>
         li <a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a>
+        
+     ul(class="nav navbar-nav")
+      li(class="dropdown")
+       a(class="dropdown-toggle", data-toggle="dropdown", href="#") Daftar Wisata 2<b class="caret"></b>
+       ul(class="dropdown-menu")
         li <a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a>
         li <a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a>
-        li <a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a>
+        li <a href="13. Tirta Sari Legong.html">Tirta Sari Legong </a>
+        li <a href="14. Museum Puri Lukisan Ubud.html">Museum Puri Lukisan Ubud</a>
+        li <a href="15. Pura Gunung Lebah.html">Pura Gunung Lebah</a>
+        li <a href="16. Museum Neka Ubud Bali.html">Museum Neka Ubud Bali</a>
+        li <a href="17. Museum Blanco Ubud.html">Museum Blanco Ubud</a>
+        li <a href="18. Legong Mahabharata.html">Legong Mahabharata</a>
+        li <a href="19. Yeh Pulu Relief.html">Yeh Pulu Relief</a>
+        li <a href="20. Tari Barong Ubud.html">Tari Barong Ubud</a>
+     
