edit tarik kecak

--- a/src/4. Tari Kecak Ubud .jade
+++ b/src/4. Tari Kecak Ubud .jade
@@ -19,7 +19,7 @@ html
 
       Section
          h3 Hari Minggu
-         table(border=0 cellpadding=5 cellspacing=10)
+         table.zebra-table
            tr(align='left')
              td Lokasi Pentas
              td Jam
@@ -30,9 +30,7 @@ html
              td 19:00
              td Trene Jenggala
              td Rp. 75.000,-
-           tr(align='left') 
-             td
-             td
+
            tr(align='left')
              td Pura Batukaru
              td 19:30
@@ -41,7 +39,7 @@ html
 
       Section
          h3 Hari Senin
-         table(border=0 cellpadding=5 cellspacing=10)
+         table.zebra-table
            tr(align='left')
              td Lokasi Pentas
              td Jam
@@ -60,7 +58,7 @@ html
 
       Section
          h3 Hari Selasa
-         table(border=0 cellpadding=5 cellspacing=10)
+         table.zebra-table
            tr(align='left')
              td Lokasi Pentas
              td Jam
@@ -74,7 +72,7 @@ html
 
       Section
          h3 Hari Rabu
-         table(border=0 cellpadding=5 cellspacing=10)
+         table.zebra-table
            tr(align='left')
              td Lokasi Pentas
              td Jam
@@ -98,7 +96,7 @@ html
 
       Section
          h3 Hari Kamis
-         table(border=0 cellpadding=5 cellspacing=10)
+         table.zebra-table
            tr(align='left')
              td Lokasi Pentas
              td Jam
@@ -122,7 +120,7 @@ html
 
       Section
          h3 Hari Jumat
-         table(border=0 cellpadding=5 cellspacing=10)
+         table.zebra-table
            tr(align='left')
              td Lokasi Pentas
              td Jam
@@ -141,7 +139,7 @@ html
 
       Section
          h3 Hari Sabtu
-         table(border=0 cellpadding=5 cellspacing=10)
+         table.zebra-table
            tr(align='left')
              td Lokasi Pentas
              td Jam
