--- a/src/index.jade
+++ b/src/index.jade
@@ -5,110 +5,177 @@ html
   body.classic
     include menu
     article
+      Section
+        h1 Tari Kecak Ubud
+        img(src="images/Tari-Kecak-Ubud.jpg" height = 300 width = 600)
 
       Section
-        h1 Wisata Ubud Bali
+        P Objek wisata Ubud sangat terkenal akan wisata air atau yang dikenal dengan nama Ayung Rafting Ubuddan wisata kesenian dan salah satunya adalah seni tari Kecak Bali. Banyak wisatawan yang wisata ke Ubud Bali, tidak merasa lengkap apabila tidak menononton pertujukan tari kecak Ubud. Tentunya tidak akan susah buat wisatawan untuk mendapatkan kesempatan menonton tari yang terkadang disebut dengan nama tari kecak api Ubud.
+
+      section
+         h3 Jadwal & Harga Tiket Tari Kecak Ubud
+         p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon dicatat, tidak setiap hari dipentaskan tarian kecak di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon lihat jadwal di bawah, untuk kepastian tempat pementasan, harga tiket dan jam pementasan tarian kecak di Ubud.
+      
 
       Section
-        P Wisata Ubud Bali, tempat wisata di Bali yang banyak wisatawan mancanegara dan wisatawan domestik yang tertarik untuk kunjungi. Tempat wisata di Ubud Bali, adalah sebuah kecamatan yang sangat terkenal semejak tahun 1930-an.
-        p Tempat wisata di Ubud Bali, terletak di Kabupaten Gianyar, Kabupaten yang banyak memiliki seniman dan dapat dikatakan merupakan pusat budaya seni di Bali, khusus seni lukis, seni ukir, seni patung, seni tari dan musik traditional Bali.
-        p Desa Ubud dari airport <A href = "http://www.rentalmobilbali.net/tag/denpasar/"> Denpasar </a>, berjarak kurang lebih 40 kilometer, dan dengan mobil anda akan menempuh waktu selama satu setengah jam.
+         h3 Hari Minggu
+         table.zebra-table
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           
+           tr(align='left')
+             td Pura Batukaru
+             td 19:30
+             td Desa Adat Sambahan 
+             td Rp. 75.000,-
 
       Section
-        h1 Wisata Ubud Bali Indonesia
-        img.big(src="images/wisata-ubud-bali.png" height = 300 width = 600)
+         h3 Hari Senin
+         table.zebra-table
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Desa Junjungan
+             td 18:30
+             td Desa Adat Junjungan
+             td Rp. 75.000,-
+           tr(align='left')
+             td Pura Dalem Ubud
+             td 19:30
+             td Adat Ubud Kaja
+             td Rp. 80.000,-
 
       Section
-        p Desa Ubud, daerah seni yang sangat sering disebut sebagai desa bertaraf internasional. Semua orang yang telah mengenal tempat wisata Ubud Bali pasti mengatakan, Ubud memang pantas untuk menyandang predikat desa internasional. Sebagian besar dipinggir jalan di kawasan ubud terdapat restaurant, hotel, galeri dan toko-toko yang menjual kerajinan lokal.
-        p Tempat wisata di Ubud Bali sangat terkenal terkenal, baik di Indonesia maupun ke mancanegara, kecamatan yang memiliki lokasi yang terletak di antara persawahan dan kawasan hutan diapit oleh jurang-jurang dengan sungai, yang membuat lokasi ini, menggambarkan alam yang sangat indah.
+         h3 Hari Selasa
+         table.zebra-table
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Jaba Pura Taman Sari
+             td 19:00
+             td Sandhi Suara
+             td Rp. 75.000,-
 
       Section
-        p Selain karena kondisi alam, Ubud juga terkenal karena seni dan budaya Bali dan sangat berkembang dari tahun ketahun. Sebagian masyarakat Ubud, kehidupan sehari-hari mereka tidak lepas dari unsur seni dan budaya. Juga sebagian masyarakatnya bermata pencaharian sebagai seniman.
+         h3 Hari Rabu
+         table.zebra-table
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Dalem Taman Kaja
+             td 19:30
+             td Desa Adat Taman Kaja
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Batu Karu
+             td 19:30
+             td Desa Adat Ubud Tengah (Penari Wanita)
+             td Rp. 80.000,-
 
       Section
-        h2 Daftar Aktifitas & Tempat Menarik Di Ubud
+         h3 Hari Kamis
+         table.zebra-table
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Puri Agung Peliatan
+             td 18:45
+             td Semara Madya
+             td Rp. 75.000,- / Orang
+           tr(align='left') 
+             td Puri Jaba Pura Taman Sari
+             td 19:30
+             td Sandhi Suara
+             td Rp. 75.000,- / Orang
+           tr(align='left') 
+             td Pura Batu Karu
+             td 19:30
+             td Desa Adat Sambahan
+             td Rp. 75.000,- / Orang
 
       Section
-        <a href="1. Tampak Siring.html"> <h2> Tampak Siring </h2> </a>
-        img.big(src="images/Tampak Siring - 1.jpg" height = 300 width = 600)
+         h3 Hari Jumat
+         table.zebra-table
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Pura Padang Kertha
+             td 19:00
+             td Padang Subadra
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Dalem Ubud
+             td 19:30
+             td Desa Adat Ubud Kaja
+             td Rp. 80.000,-
 
       Section
-        <a href="2. Puri Ubud.html"> <h2> Puri Ubud </h2> </a>
-        img.big(src="images/istana-puri-saren-ubud-bali.jpg" height = 300 width = 600)
+         h3 Hari Sabtu
+         table.zebra-table
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Dalem Taman Kaja
+             td 19:30
+             td Desa Adat Taman Kaja
+             td Rp. 75.000,-
 
       Section
-        <a href="3. Pura Taman Saraswati.html"> <h2> Pura Taman Saraswati </h2> </a>
-        img.big(src="images/Pura-Taman-Saraswati-Ubud.jpg" height = 300 width = 600)
+        p Selain jadwal rutin dari tari kecak Ubud diatas, ada jadwal tari kecak lain yang hanya diadakan pada saat bulan purnama. Tempat pementasan pada saat bulan purnama adanya di Museum Arma Ubud, jadwal pentas pada jam 18:45, dengan harga tiket Rp. 100.000.
+        h3 Mohon dicatat, harga tiket dapat berubah sewaktu-waktu.
+
+      section
+        h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
+        img(src="images/tari-kecak-di-pura-uluwatu.jpg" height = 300 width = 600)
 
       Section
-        <a href="4. Tari Kecak Ubud.html"> <h2> Tari Kecak Ubud </h2> </a>
-        img.big(src="images/Tari-Kecak-Ubud.jpg" height = 300 width = 600)
+        p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
 
       Section
-        <a href="5. Lempad House.html"> <h2> Lempad House </h2> </a>
-        img.big(src="images/lempad-house.jpg" height = 300 width = 600)
+        p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil + driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil.
 
       Section
-        <a href="6. Ayung Rafting.html"> <h2> Ayung Rafting </h2> </a>
-        img.big(src="images/ayung-rafting-ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="7. Sawah Terasering Ubud.html"> <h2> Sawah Terasering Ubud </h2> </a>
-        img.big(src="images/Sawah-Terasering-Ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="8. Ubud Monkey Forest.html"> <h2> Ubud Monkey Forest </h2> </a>
-        img.big(src="images/ubudMKF.jpg" height = 300 width = 600)
-
-      Section
-        <a href="9. Arma Museum Ubud.html"> <h2> Arma Museum Ubud </h2> </a>
-        img.big(src="images/amu1.jpg" height = 300 width = 600)
-
-      Section
-        <a href="10. Goa Gajah Ubud.html"> <h2> Goa Gajah Ubud </h2> </a>
-        img.big(src="images/Goa Gajah - 1.jpg" height = 300 width = 600)
-
-      Section
-        <a href="11. Gunung Kawi Bali.html"> <h2> Gunung Kawi Bali </h2> </a>
-        img.big(src="images/Gunung-Kawi-Bali.jpg" height = 300 width = 600)
-
-      Section
-        <a href="12. Air Terjun Tegenungan.html"> <h2> Air Terjun Tegenungan </h2> </a>
-        img.big(src="images/air-terjun-tegenungan.jpg" height = 300 width = 600)
-
-      Section
-        <a href="13. Tirta Sari Legong.html"> <h2> Tirta Sari Legong </h2> </a>
-        img.big(src="images/tsl.jpg" height = 300 width = 600)
-
-      Section
-        <a href="14. Museum Puri Lukisan Ubud.html"> <h2> Museum Puri Lukisan Ubud </h2> </a>
-        img.big(src="images/Museum-Puri-Lukisan-Ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="15. Pura Gunung Lebah.html"> <h2> Pura Gunung Lebah </h2> </a>
-        img.big(src="images/PGL.jpg" height = 300 width = 600)
-
-      Section
-        <a href="16. Museum Neka Ubud Bali.html"> <h2> Museum Neka Ubud Bali </h2> </a>
-        img.big(src="images/museum-neka-ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="17. Museum Blanco Ubud.html"> <h2> Museum Blanco Ubud </h2> </a>
-        img.big(src="images/don-antonio-blanco-museum-ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="18. Legong Mahabharata.html"> <h2> Legong Mahabharata </h2> </a>
-        img.big(src="images/Legong-Mahabharata-Di-Ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="19. Yeh Pulu Relief.html"> <h2> Yeh Pulu Relief </h2> </a>
-        img.big(src="images/yeh-pulu-relief.jpg" height = 300 width = 600)
-
-      Section
-        <a href="20. Tari Barong Ubud.html"> <h2> Tari Barong Ubud </h2> </a>
-        img.big(src="images/TariBarongUbud.jpg" height = 300 width = 600)
+        p Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.
 
    include footer
+
+
 
 
 
